[gd_scene load_steps=3 format=3 uid="uid://bg6een12g0ti4"]

[ext_resource type="Script" path="res://ipad_menu/scripts/IpadMenu.gd" id="1_wmjge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xf7vo"]
bg_color = Color(0.95186, 0.808878, 0.587872, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 2
border_color = Color(2.31028e-06, 0.521979, 0.61782, 1)

[node name="IpadMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmjge")
numDishesPerRow = 3

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -325.0
offset_right = 450.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xf7vo")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_bottom = 100

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 25
columns = 2

[node name="ModalButtons" type="MarginContainer" parent="Panel"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="Confirm Button" type="Button" parent="Panel/ModalButtons"]
layout_mode = 2
size_flags_horizontal = 0
text = "CONFIRM"

[node name="Cancel Button" type="Button" parent="Panel/ModalButtons"]
layout_mode = 2
size_flags_horizontal = 8
text = "CANCEL
"

[connection signal="pressed" from="Panel/ModalButtons/Confirm Button" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="Panel/ModalButtons/Cancel Button" to="." method="_on_cancel_button_pressed"]
